[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/actors/cave-level-mini-boss/CaveLevelMiniBoss.gd" type="Script" id=1]
[ext_resource path="res://assets/art/traps/onigawara-head.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.8371, 15.3219 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="CaveLevelMiniBoss" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -16, -32 )
texture = ExtResource( 2 )
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="CoolOffTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="InitialDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 2 )

[node name="RunAndJumpTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="RunAndJumpTimer" to="." method="_on_RunAndJumpTimer_timeout"]
